# skillatlas_v2

./: .pre-commit-config.yaml  api.jac  jac.toml  learning_tracking.md  main.jac  models.jac  pyproject.toml
components/: BrandLogo.cl.jac  CTASection.cl.jac  FeaturesSection.cl.jac  Footer.cl.jac  HeroSection.cl.jac  HowItWorksSection.cl.jac  NavLink.cl.jac  Navbar.cl.jac  OurTeamSection.cl.jac  PricingSection.cl.jac  SignUpModal.cl.jac  StatsSection.cl.jac  TestimonialsSection.cl.jac
pages/: dashboard.cl.jac  index.cl.jac  login.cl.jac  not_found.cl.jac  signup.cl.jac
styles/: global.css
utils/: gsap.js  gsap_utils.cl.jac
